Cambios Reto 2 Continentes

--- a/countries/templates/countries/country.html
+++ b/countries/templates/countries/country.html
@@ -3,4 +3,5 @@
 {% if country.name == 'colombia' %}
 	<p>Yeah</p>
 {% endif %}
+<p>detail_url <a href="{{ country.detail_url }}">Ir al detalle</a></p>
 <br/>
